fix(website): fix volume controls for audio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
   </head>
 
-  <body class="not-active">
+  <body>
 
     <div class="menu-bar">
       <div class="frow row-start">
@@ -44,6 +44,7 @@
           <div class="play-button play-button-before"></div>
           <div class="play-button play-button-after"></div>
         </button>
+        <!-- <input type="number" id="volume-slider" oninput="setVolume(this.value)"> -->
         <input type="range" id="volume-slider" min="0" max="1" value="1" step="0.01" oninput="setVolume(this.value)" disabled>
       </div>
 
