--- a/extension-pages/options.html
+++ b/extension-pages/options.html
@@ -14,13 +14,12 @@
           <label>
             Resolution
             <select id="resolutions">
-              <option value="fit-screen">Fit Screen</option>
+              <option value="fit-screen" selected>Fit Screen</option>
               <option value="4K">4K (2160p)</option>
               <option value="1080p">Full-HD (1080p)</option>
               <option value="720p">HD (720p)</option>
               <option value="480p">SD (480p)</option>
               <option value="360p">SD (360p)</option>
-              <option value="9p" selected>SD (9p)</option>
             </select>
           </label>
         </div>
