--- a/index.html
+++ b/index.html
@@ -167,5 +167,5 @@
   <script src="background/helpers/IceServersHandler.js"></script>
   <script src="background/helpers/getStats.js"></script>
 
-  <script src="scripts.js"></script>
+  <script src="receiver.js"></script>
 </html>
