optimize streamer.html

--- a/streamer.html
+++ b/streamer.html
@@ -21,7 +21,7 @@
     <script src="background/helpers/CodecsHandler.js"></script>
     <script src="background/helpers/IceServersHandler.js"></script>
     <script src="background/helpers/MultiStreamsMixer.js"></script>
-    <script src="background/helpers/AntMediaWrapper.js"></script>
+    <!-- <script src="background/helpers/AntMediaWrapper.js"></script> -->
     <script src="background/globals.js"></script>
     <script src="background/common.js"></script>
     <!-- <script src="background/runtimePort.js"></script> -->
@@ -31,11 +31,11 @@
     <script src="background/onAccessApproved.js"></script>
     <script src="background/setupWebRTCConnection.js"></script>
     <script src="background/shareStreamUsingRTCMultiConnection.js"></script>
-    <script src="background/shareStreamUsingAntMediaServer.js"></script>
+    <!-- <script src="background/shareStreamUsingAntMediaServer.js"></script> -->
     <script src="background/setDefaults.js"></script>
-    <script src="background/captureDesktop.js"></script>
-    <script src="background/captureCamera.js"></script>
-    <script src="background/captureTabUsingTabCapture.js"></script>
+    <!-- <script src="background/captureDesktop.js"></script> -->
+    <!-- <script src="background/captureCamera.js"></script> -->
+    <!-- <script src="background/captureTabUsingTabCapture.js"></script> -->
   </head>
 
   <body>
@@ -67,7 +67,7 @@
     <article id="stream-section">
       <div class="frow gutters">
         <div class="col-xs-1-1">
-          <div id="magic" class="card shadow-light clickable">
+          <div id="video-and-audio" class="card shadow-light clickable">
             <div class="frow column-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +89,7 @@
                   </g>
                 </g>
               </svg>
-              MAGIC
+              getDisplayMedia
             </div>
           </div>
         </div>
