organize file structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>2N</title>
     <link rel="icon" type="image/png" href="2N.png" />
     <link rel="stylesheet" href="frow/frow.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="receiver/receiver.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500"
       rel="stylesheet"
@@ -167,5 +167,5 @@
   <script src="background/helpers/IceServersHandler.js"></script>
   <script src="background/helpers/getStats.js"></script>
 
-  <script src="receiver.js"></script>
+  <script src="receiver/receiver.js"></script>
 </html>
