--- a/streamer/index.html
+++ b/streamer/index.html
@@ -9,8 +9,7 @@
     <title>2N</title>
     <link rel="icon" type="image/png" href="2N.png" />
     <link rel="stylesheet" href="frow/frow.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="extension-pages/dropdown-styles.css" />
+    <link rel="stylesheet" href="streamer/streamer.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500"
       rel="stylesheet"
@@ -124,7 +123,7 @@
     </div>
 
     <!-- <script src="extension-pages/dropdown.js"></script> -->
-    <script src="streamer.js"></script>
+    <script src="streamer/streamer.js"></script>
   </body>
 
   <!-- <script src="background/helpers/socket.io.js"></script>
