make options appearance toggle

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>2N</title>
     <link rel="icon" type="image/png" href="2N.png" />
     <link rel="stylesheet" href="frow/frow.css" />
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="receiver/receiver.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500"
