--- a/streamer/index.html
+++ b/streamer/index.html
@@ -9,6 +9,7 @@
     <title>2N</title>
     <link rel="icon" type="image/png" href="2N.png" />
     <link rel="stylesheet" href="frow/frow.css" />
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="streamer/streamer.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500"
@@ -99,7 +100,7 @@
         </button>
       </div>
 
-      <section id="options">
+      <section id="options" hidden>
         <div class="frow row-start gutters">
           <div class="col-xs-1-2">
             <div class="settings-item">
@@ -181,14 +182,6 @@
               <img class="ml-5" src="../images/progress.gif" />
             </div>
           </div>
-          <a
-            type="button"
-            id="done-button"
-            href="dropdown.html"
-            target="_blank"
-          >
-            Done
-          </a>
         </div>
       </section>
       <section id="stop-section">
