work on getting capturedesktop to accept constraints

--- a/streamer/index.html
+++ b/streamer/index.html
@@ -30,7 +30,7 @@
     <script src="background/onAccessApproved.js"></script>
     <script src="background/shareStreamUsingRTCMultiConnection.js"></script>
     <script src="background/setDefaults.js"></script>
-    <!-- <script src="background/captureDesktop.js"></script> -->
+    <script src="background/captureDesktop.js"></script>
     <!-- <script src="background/captureTabUsingTabCapture.js"></script> -->
   </head>
 
