--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="menu-bar">
       <div class="frow row-start">
         <button id="show-stats-bar" class="button-link">Stats</button>
-        <button id="show-chats" class="button-link">Past Tabs</button>
+        <!-- <button id="show-chats" class="button-link">Past Tabs</button> -->
       </div>
     </div>
 
