--- a/streamer/index.html
+++ b/streamer/index.html
@@ -68,6 +68,7 @@
             <div id="video-button" class="card shadow-light clickable">
               <div class="frow column-center">
                 <svg
+                  class="stream-svg"
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
                   version="1.1"
@@ -95,24 +96,13 @@
             <div id="audio-button" class="card shadow-light clickable">
               <div class="frow column-center">
                 <svg
+                  class="stream-svg"
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
-                  version="1.1"
                 >
-                  <g
-                    stroke="none"
-                    stroke-width="1"
-                    fill="none"
-                    fill-rule="evenodd"
-                  >
-                    <path
-                      d="M1 18L1 21 4 21C4 19.3 2.7 18 1 18L1 18ZM1 14L1 16C3.8 16 6 18.2 6 21L8 21C8 17.1 4.9 14 1 14L1 14ZM1 10L1 12C6 12 10 16 10 21L12 21C12 14.9 7.1 10 1 10L1 10ZM21 3L3 3C1.9 3 1 3.9 1 5L1 8 3 8 3 5 21 5 21 19 14 19 14 21 21 21C22.1 21 23 20.1 23 19L23 5C23 3.9 22.1 3 21 3L21 3Z"
-                    />
-                    <rect x="0" y="0" width="24" height="24" />
-                    <g transform="translate(-208.000000, -106.000000)">
-                      <g transform="translate(0.000000, 114.000000)" />
-                    </g>
-                  </g>
+                  <path
+                    d="M2 6h3.828c-1.335 2.905-1.335 9.096 0 12h-3.828c-1.311-1.108-2-3.551-2-5.995 0-2.45.692-4.9 2-6.005zm22 6.005c.005 8.031-3.145 12.864-6.121 11.864-.774-.26-9.567-5.579-9.567-5.579-1.993-2.22-1.993-10.288 0-12.508 0 0 9.161-5.476 9.548-5.633 2.691-1.086 6.136 3.82 6.14 11.856zm-3.383-7.693c-1.053-2.264-3.002-2.226-4.034.002-.588 1.271-.993 3.165-1.21 4.797h.527c1.587 0 2.873 1.287 2.873 2.875s-1.286 2.875-2.873 2.875h-.515c.217 1.603.616 3.538 1.206 4.89.988 2.271 3.062 2.232 4.033-.002 1.946-4.477 1.772-11.609-.007-15.437z"
+                  />
                 </svg>
                 Audio Only
               </div>
