--- a/streamer/index.html
+++ b/streamer/index.html
@@ -7,31 +7,31 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>2N</title>
-    <link rel="icon" type="image/png" href="2N.png" />
-    <link rel="stylesheet" href="frow/frow.css" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="streamer/streamer.css" />
+    <link rel="icon" type="image/png" href="/2N.png" />
+    <link rel="stylesheet" href="/frow/frow.css" />
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/streamer/streamer.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500"
       rel="stylesheet"
     />
-    <script src="background/helpers/socket.io.js"></script>
-    <script src="background/helpers/adapter.js"></script>
-    <script src="background/helpers/RTCMultiConnection.js"></script>
-    <script src="background/helpers/CodecsHandler.js"></script>
-    <script src="background/helpers/IceServersHandler.js"></script>
-    <script src="background/helpers/MultiStreamsMixer.js"></script>
-    <script src="background/globals.js"></script>
-    <script src="background/common.js"></script>
-    <!-- <script src="background/runtimePort.js"></script> -->
-    <script src="background/online-offline.js"></script>
-    <script src="background/gotTabCaptureStream.js"></script>
-    <script src="background/gotStream.js"></script>
-    <script src="background/onAccessApproved.js"></script>
-    <script src="background/shareStreamUsingRTCMultiConnection.js"></script>
-    <script src="background/setDefaults.js"></script>
-    <script src="background/captureDesktop.js"></script>
-    <!-- <script src="background/captureTabUsingTabCapture.js"></script> -->
+    <script src="/background/helpers/socket.io.js"></script>
+    <script src="/background/helpers/adapter.js"></script>
+    <script src="/background/helpers/RTCMultiConnection.js"></script>
+    <script src="/background/helpers/CodecsHandler.js"></script>
+    <script src="/background/helpers/IceServersHandler.js"></script>
+    <script src="/background/helpers/MultiStreamsMixer.js"></script>
+    <script src="/background/globals.js"></script>
+    <script src="/background/common.js"></script>
+    <!-- <script src="/background/runtimePort.js"></script> -->
+    <script src="/background/online-offline.js"></script>
+    <script src="/background/gotTabCaptureStream.js"></script>
+    <script src="/background/gotStream.js"></script>
+    <script src="/background/onAccessApproved.js"></script>
+    <script src="/background/shareStreamUsingRTCMultiConnection.js"></script>
+    <script src="/background/setDefaults.js"></script>
+    <script src="/background/captureDesktop.js"></script>
+    <!-- <script src="/background/captureTabUsingTabCapture.js"></script> -->
   </head>
 
   <body>
@@ -206,7 +206,7 @@
         </div>
       </div>
     </div>
-    <script src="streamer/options.js"></script>
-    <script src="streamer/streamer.js"></script>
+    <script src="/streamer/options.js"></script>
+    <script src="/streamer/streamer.js"></script>
   </body>
 </html>
