add viewer count to streamer view. closes #17

--- a/streamer/index.html
+++ b/streamer/index.html
@@ -195,6 +195,7 @@
           </section>
           <section id="stop-section" hidden>
             <a id="public-link" target="_blank"></a>
+            <div class="viewer-count"><span id="viewer-count-number"></span> Viewers</div>
             <button type="button" id="stop-sharing" class="">
               End Sharing
             </button>
