--- a/streamer/index.html
+++ b/streamer/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/streamer/streamer.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Quicksand:500"
+      href="https://fonts.googleapis.com/css?family=Quicksand:500&display=swap"
       rel="stylesheet"
     />
     <script src="/background/helpers/socket.io.js"></script>
@@ -32,6 +32,20 @@
     <script src="/background/setDefaults.js"></script>
     <script src="/background/captureDesktop.js"></script>
     <!-- <script src="/background/captureTabUsingTabCapture.js"></script> -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-150821892-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-150821892-1");
+    </script>
   </head>
 
   <body>
@@ -68,7 +82,7 @@
               <div class="label">Options</div>
               <div class="frow row-start gutters">
                 <div class="col-xs-1-2">
-                  <div class="settings-item">
+                  <div class="settings-item mb-0">
                     <label>
                       Resolution
                       <select id="resolutions">
@@ -84,7 +98,7 @@
                 </div>
 
                 <div class="col-xs-1-2">
-                  <div class="settings-item">
+                  <div class="settings-item mb-0">
                     <label>
                       Codec
                       <select id="codecs">
@@ -97,7 +111,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-1-2">
+                <!-- <div class="col-xs-1-2">
                   <div class="settings-item mb-0">
                     <label>
                       Bandwidth
@@ -109,9 +123,9 @@
                       />
                     </label>
                   </div>
-                </div>
+                </div> -->
 
-                <div class="col-xs-1-2">
+                <!-- <div class="col-xs-1-2">
                   <div class="settings-item mb-0">
                     <label>
                       Room Password
@@ -123,7 +137,7 @@
                       />
                     </label>
                   </div>
-                </div>
+                </div> -->
 
                 <!-- NOTE: Keep this for now as example of checkbox -->
                 <!-- <div class="col-xs-1-2">
@@ -138,8 +152,8 @@
                       />
                     </label>
                   </div>
-                </div>
-              </div> -->
+                </div> -->
+              </div>
             </section>
 
             <section id="stream-section">
@@ -195,7 +209,9 @@
           </section>
           <section id="stop-section" hidden>
             <a id="public-link" target="_blank"></a>
-            <div class="viewer-count"><span id="viewer-count-number"></span> Viewers</div>
+            <div class="viewer-count">
+              <span id="viewer-count-number"></span> Viewers
+            </div>
             <button type="button" id="stop-sharing" class="">
               End Sharing
             </button>
