better mobile experience

--- a/streamer/index.html
+++ b/streamer/index.html
@@ -73,12 +73,15 @@
           <div id="live-indicator">LIVE</div>
         </div>
         <div class="col-md-1-2">
+          <div class="visible-xs visible-sm my-30">
+            Sorry, streaming most likely won't work on mobile devices
+          </div>
           <section id="setup-section">
             <label id="room-id-label" class="row-start">
               <span class="shrink-0">2n.fm/?s=</span>
               <input type="text" id="room-id" placeholder="Random" />
             </label>
-            <section id="options">
+            <section id="options" hidden>
               <div class="label">Options</div>
               <div class="frow row-start gutters">
                 <div class="col-xs-1-2">
