--- a/streamer/index.html
+++ b/streamer/index.html
@@ -89,7 +89,9 @@
                     <label>
                       Resolution
                       <select id="resolutions">
-                        <option value="fit-screen" selected>Fit Screen</option>
+                        <option value="fit-screen" selected
+                          >Default (Fit Screen)</option
+                        >
                         <option value="4K">4K (2160p)</option>
                         <option value="1080p">Full-HD (1080p)</option>
                         <option value="720p">HD (720p)</option>
