improve homepage on desktop and mobile

--- a/index.html
+++ b/index.html
@@ -84,17 +84,30 @@
             />
           </g>
         </svg>
-        <div class="frow gutters">
-          <div class="col-md-1-2 mt-50">
-            <h1 class="mb-30">Start a Room</h1>
-            <a type="button" class="stream-button" href="/streamer">Stream</a>
+        <div class="frow items-stretch width-100 mt-50">
+          <div class="home-half">
+            <div class="frow column-end">
+              <div>
+                <h1 class="mb-30">Start a Room</h1>
+                <a type="button" class="stream-button" href="/streamer">
+                  Stream
+                </a>
+              </div>
+            </div>
           </div>
-          <div class="col-md-1-2 mt-50">
-            <h1 class="mb-30">Join a Room</h1>
-            <form id="join-form" class="frow nowrap">
-              <input type="text" id="room-input" placeholder="Room Name" />
-              <button type="submit" id="enter-room" class="ml-15">Enter</button>
-            </form>
+          <div class="line-divider"></div>
+          <div class="home-half">
+            <div class="frow column-start">
+              <div>
+                <h1 class="mb-30">Join a Room</h1>
+                <form id="join-form" class="frow nowrap">
+                  <input type="text" id="room-input" placeholder="Room Name" />
+                  <button type="submit" id="enter-room">
+                    Go
+                  </button>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
