--- a/2nfm/public/index.html
+++ b/2nfm/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>2nfm</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand:500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
