--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>2nfm</title>
+    <title>2N.fm</title>
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      href="https://github.com/codysherman/2NFM/releases.atom"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:500&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-150821892-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-150821892-1");
+    </script>
   </head>
   <body>
     <noscript>
