--- a/public/404.html
+++ b/public/404.html
@@ -8,13 +8,10 @@
       // - https://stackoverflow.com/a/50259501
       // - https://stackoverflow.com/a/50247140
       // ========================================
-      const segment = 1
+      const segment = 1;
 
-      sessionStorage.redirect = '/' + location.pathname.slice(1).split('/').slice(segment).join('/')
-
-      location.replace(
-        location.pathname.split('/').slice(0, 1 + segment).join('/')
-      )
+      sessionStorage.redirect = location.pathname;
+      location.replace('/');
     </script>
   </head>
 </html>
