--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
 
       gtag("config", "UA-150821892-1");
     </script>
+    <!-- specifically so we are not setting variables on `window`; expected to be global by RTCMultiConnection-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
   </head>
   <body>
     <noscript>
