--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       href="https://github.com/codysherman/2NFM/releases.atom"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Hind:wght@600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Cabin:wght@600;700&display=swap"
       rel="stylesheet"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
