--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>2N.fm</title>
+    <meta name="theme-color" content="#333">
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <link
       rel="alternate"
